# Vanguard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Launch-Vanguard.bat  Launch-Vanguard.ps1  Launch-Vanguard.sh  README.md
src/: main.rs  models.rs
src/analyzer/: ai.rs  complexity.rs  git.rs  mod.rs  quality.rs  security.rs  walker.rs
src/gui/: mod.rs  theme.rs
src/output/: json.rs  markdown.rs
src/secure/: analyzer_trait.rs  mod.rs
ui-prototype/: dashboard.html  index.html  results.html  welcome.html
