[package]
name = "fuji"
version = "2.0.0"
edition = "2021"
description = "Codebase Intelligence Tool — AI detection, security scanning, code quality"

[dependencies]
eframe = "0.31"
egui = "0.31"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
rayon = "1.10"
walkdir = "2"
sha2 = "0.10"
rfd = "0.15"
arboard = "3"
rand = "0.8"
